deploy/coordinator/components/inference-gateway/epp-role/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${POOL_NAME}-inference-route
  labels:
    istio.io/rev: llm-d-gateway
spec:
  parentRefs:
  - name: inference-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: ${ROLE_PATH}
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: ${POOL_NAME}
      port: 8000
    timeouts:
      request: 30s
